--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Dashboard with multiple modules for different purpuses.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "lint": "eslint src/"
   },
   "keywords": [
     "nodejs"
@@ -13,12 +15,16 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "mongoose": "^5.10.8",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.4"
   },
   "repository": {
